Scroll-top button visibility-change removed due to rendering bug/conflict with top fixed nav bar

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -318,8 +318,7 @@ body .fixed {
   transition: all 0.5s ease-in-out; }
 
 #scroll-top {
-  transition: all 0.5s ease-in-out;
-  visibility: hidden; }
+  transition: all 0.5s ease-in-out; }
 
 #scroll-top:hover {
   color: #888888;
