--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -25,7 +25,7 @@
 
 #scroll-top {
 	transition: all 0.5s ease-in-out;
-	visibility: hidden;
+	// visibility: hidden;
 }
 
 #scroll-top:hover {
